--- a/static/api-demo.html
+++ b/static/api-demo.html
@@ -1,30 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Service</title>
 </head>
+
 <body>
     <textarea id="input" rows="4" cols="50"></textarea>
-    <button id="submit">获取实时回复（打字效果）</button>
-    <button id="testApi">测试API POST效果</button>
+    <button id="submitTyping">获取实时回复（打字效果）</button>
+    <button id="submitPost">测试API POST效果</button>
     <div id="responses"></div>
 
     <script>
         const input = document.getElementById('input');
-        const submit = document.getElementById('submit');
-        const testApi = document.getElementById('testApi');
+        const submitTyping = document.getElementById('submitTyping');
+        const submitPost = document.getElementById('submitPost');
         const responses = document.getElementById('responses');
-        
+
         const serverUrl = `${location.protocol === 'https:' ? 'wss://' : 'ws://'}${location.host}`;
+        let websocket;
+        let bbmToken;
+
+        async function getToken() {
+            const response = await fetch(`/token?appkey=Uicm6VMjVPdzepbqnwNvpl25xJjRxFekMV8QZdeTLTwacNBl`);
+            const data = await response.json();
+            bbmToken = data.token;
+            websocket = createWebSocket();
+        }
+
+        function createWebSocket() {
+            const ws = new WebSocket(serverUrl + '/ws');
+
+            ws.onmessage = (event) => {
+                const text = event.data;
+                if (text === "{{BBMCPLT}}") {
+                    history.push([wsRequest, wsResponse]);
+                    wsResponse = '';
+                } else {
+                    wsResponse += text;
+                    appendResponse(text, true);
+                }
+            };
+
+            ws.onclose = (event) => {
+                if (event.code === 4001) {
+                    alert('Token 已过期，请刷新页面重新获取。');
+                } else {
+                    setTimeout(() => {
+                        websocket = createWebSocket();
+                    }, 1000);
+                }
+            };
+
+            return ws;
+        }
 
         let history = [];
 
-        const websocket = new WebSocket(serverUrl + '/ws');
-
         let wsRequest = '';
-        submit.addEventListener('click', () => {
+        submitTyping.addEventListener('click', () => {
             const text = input.value;
             wsRequest = text;
             input.value = '';
@@ -35,43 +71,32 @@
                 top_p: 0.7,
                 temperature: 0.95,
                 history: history,
-                token: 'Uicm6VMjVPdzepbqnwNvpl25xJjRxFekMV8QZdeTLTwacNBl'
+                token: bbmToken
             });
             console.log('StringToSendToServerWS:' + req);
             websocket.send(req);
         });
 
         let wsResponse = '';
-        websocket.onmessage = (event) => {
-            const text = event.data;
-            if(text =="{{BBMCPLT}}"){
-                history.push([wsRequest, wsResponse]);
-                wsResponse = '';
-            }
-            else{
-                wsResponse += text;
-                appendResponse(text, true);
-            }
-        };
 
-        testApi.addEventListener('click', async () => {
+        submitPost.addEventListener('click', async () => {
             const text = input.value;
             input.value = '';
             appendQuestion(text);
 
             const req = JSON.stringify({
-                    prompt: text,
-                    history: history,
-                    max_length: 2048,
-                    top_p: 0.7,
-                    temperature: 0.95
-                });
+                prompt: text,
+                history: history,
+                max_length: 2048,
+                top_p: 0.7,
+                temperature: 0.95
+            });
             console.log('StringToPostToServer:' + req);
             const response = await fetch(`${location.protocol}//${location.host}`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': 'Bearer Uicm6VMjVPdzepbqnwNvpl25xJjRxFekMV8QZdeTLTwacNBl',
+                    'Authorization': `Bearer ${bbmToken}`,
                 },
                 body: req,
             });
@@ -101,6 +126,10 @@
                 responses.appendChild(responseDiv);
             }
         }
+
+        // 页面加载时获取 token，并创建 WebSocket 连接
+        getToken();
     </script>
 </body>
+
 </html>
