--- a/static/api-demo.html
+++ b/static/api-demo.html
@@ -5,23 +5,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Service</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            text-align: center;
+            padding: 1rem;
+            background-color: #0d47a1;
+            color: white;
+            margin: 0;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 2rem auto;
+            background-color: white;
+            padding: 2rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 6px;
+        }
+
+        textarea,
+        input {
+            font-family: Arial, sans-serif;
+            margin: 0.25rem 0;
+        }
+
+        button {
+            background-color: #0d47a1;
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 4px;
+            border: none;
+            cursor: pointer;
+            margin: 0.25rem 0;
+        }
+
+        button:hover {
+            background-color: #1a73e8;
+        }
+
+        label {
+            margin-right: 0.5rem;
+        }
+
+        #responses {
+            margin-top: 1rem;
+        }
+
+        #input{
+            width:100%;
+        }
+        #appkey{
+            width:70%；
+        }
+        .question,
+        .response {
+            background-color: #f0f0f0;
+            padding: 0.5rem;
+            margin: 0.25rem 0;
+            border-radius: 4px;
+        }
+
+        .question {
+            font-weight: bold;
+            background-color: #e0e0e0;
+        }
+    </style>
 </head>
 
 <body>
-    <textarea id="input" rows="4" cols="50"></textarea>
-    <button id="submitTyping">获取实时回复（打字效果）</button>
-    <button id="submitPost">测试API POST效果</button>
-    <label for="appkey">Appkey: </label>
-    <input type="text" id="appkey">
-    <label for="max_length">最大内容长度: </label>
-    <input type="number" id="max_length" value="2000" min="0" max="3000" step="100">
+    <h1>ChatGLM API Demo</h1>
+    <div class="container">
+        <textarea id="input" rows="4" cols="50"></textarea><br />
+        <button id="submitTyping">实时回复（实时效果）</button>
+        <button id="submitPost"  >整体回复（完成显示）</button><br /><br />
+        <label for="appkey">Appkey: </label>
+        <input type="text" id="appkey"><br />
 
-    <label for="top_p">Top_p: </label>
-    <input type="number" id="top_p" value="0.7" min="0" max="1" step="0.01">
-    <label for="temperature">Temperature: </label>
-    <input type="number" id="temperature" value="0.95" min="0" max="1" step="0.01">
+        <label for="max_length">最大内容长度: </label>
+        <input type="number" id="max_length" value="2000" min="0" max="3000" step="100"><br />
+        <label for="top_p">Top_p: </label>
+        <input type="number" id="top_p" value="0.7" min="0" max="1" step="0.01"><br />
+        <label for="temperature">Temperature: </label>
+        <input type="number" id="temperature" value="0.95" min="0" max="1" step="0.01"><br />
 
-    <div id="responses"></div>
+        <div id="responses"></div>
+    </div>
 
     <script>
         const input = document.getElementById('input');
