修复中文分号。

--- a/static/api-demo.html
+++ b/static/api-demo.html
@@ -62,7 +62,7 @@
             width:100%;
         }
         #appkey{
-            width:70%；
+            width:70%;
         }
         .question,
         .response {
