--- a/static/api-demo.html
+++ b/static/api-demo.html
@@ -8,7 +8,6 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
             margin: 0;
             padding: 0;
         }
@@ -17,6 +16,10 @@
         input {
             font-family: Arial, sans-serif;
             margin: 0.25rem 0;
+            outline: none;
+            border: 1px solid #ccc;
+            padding: 0.5rem;
+            border-radius: 4px;
         }
 
         button {
@@ -38,7 +41,8 @@
         }
 
         #input {
-            width: 100%;
+            width: 80%;
+            resize: none;
         }
 
         #appkey {
@@ -57,55 +61,58 @@
             font-weight: bold;
             background-color: #e0e0e0;
         }
-        .h1{
+
+        .h1 {
             background-color: #0d47a1;
             color: white;
             margin: 0;
             height: 7vh;
             font-size: 5vh;
-            text-align: center;
-            vertical-align: middle;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        .top{
+
+        .top {
             max-width: 800px;
             margin: 0 auto;
             padding: 1vh;
-            height: 20vh;
+            height: 25vh;
+            background-color: #f0f0f0;
         }
+
         #responses {
             max-width: 800px;
             margin: 0 auto;
             padding: 1vh;
-            height: 70vh;
-            overflow-y: auto; /* 添加垂直滚动条 */
-            padding: 1rem;
-            background-color: white;
-        }
-        .top input{
-            margin-right: 2rem;
+            height: 50vh;
+            overflow-y: auto;
         }
 
+        .top input {
+            background-color: #f0f0f0;
+            margin-right: 1rem;
+        }
     </style>
 </head>
 
 <body>
     <div class="h1">ChatGLM API Demo</div>
     <div class="top">
-        <textarea id="input" rows="4" cols="50"></textarea><br />
+        <textarea id="input" rows="4" cols="50" placeholder="请输入提问内容"></textarea><br />
         <button id="submitTyping">实时回复（实时效果）</button>
-        <button id="submitPost">整体回复（完成显示）</button><br /><br />
+        <button id="submitPost">整体回复（完成显示）</button><br />
         <label for="appkey">Appkey: </label>
         <input type="text" id="appkey"><br />
-
         <label for="max_length">最大内容长度: </label>
         <input type="number" id="max_length" value="2000" min="0" max="3000" step="100">
         <label for="top_p">Top_p: </label>
-        <input type="number" id="top_p" value="0.7" min="0" max="1" step="0.01"><label for="temperature">Temperature: </label>
+        <input type="number" id="top_p" value="0.7" min="0" max="1" step="0.01"><label for="temperature">Temperature:
+        </label>
         <input type="number" id="temperature" value="0.95" min="0" max="1" step="0.01">
     </div>
 
     <div id="responses"></div><br /><br />
-
     <script>
         const input = document.getElementById('input');
         const appkeyInput = document.getElementById('appkey');
